# journey-autocode

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.claude/skills/journey-archaeology/: SKILL.md
.claude/skills/journey-bootstrap/: SKILL.md
.claude/skills/journey-decision/: SKILL.md
.claude/skills/journey-discover/: SKILL.md
.claude/skills/journey-manuals-generate/: SKILL.md
.claude/skills/journey-phase-end/: SKILL.md
.claude/skills/journey-phase-start/: SKILL.md
.claude/skills/journey-release-start/: SKILL.md
.claude/skills/journey-retrospective/: SKILL.md
.claude/skills/journey-roadmap-nourish/: SKILL.md
.claude/skills/journey-scope-review/: SKILL.md
.claude/skills/journey-upgrade/: SKILL.md
docs/: getting-started.md  open-vs-site.md
docs/examples/: mesa-pronta-vision.md
docs/phases/: 00-warmup.md  01-foundation.md  02-discovery.md  03-build.md  04-release.md  05-run.md  README.md
templates/: adr-0001.md.jinja  agents.md.jinja  ci.yml.jinja  claude.md.jinja  constitution.placeholder.md.jinja  contributing.md.jinja  gitignore.jinja  handover.md.jinja  readme.md.jinja  roadmap-format-contract.md.jinja  roadmap.md.jinja  roadmap.seed.yaml.jinja
