[project]
name = "journey-autocode"
version = "0.1.0"
description = "Journey AutoCode — open-source methodology + installables (Apache-2.0)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Journey contributors" }]
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/journey-core", "packages/journey-skill"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-cov>=5",
]
